# HeartDiseasePrediction-MLOPS

./: Dockerfile  README.md  app.py  main.py  params.yaml  pyproject.toml  requirements.txt  schema.yaml  setup.py  template.py
.dvc/: config
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_trainer.ipynb  05_model_evaluation.ipynb  trials.ipynb
src/mlProject/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/mlProject/config/: configuration.py
src/mlProject/entity/: config_entity.py
src/mlProject/pipeline/: prediction.py  stage_03_data_transformation.py
static/css/: styles.css
static/css2/: style.css
templates/: dashboard.html  index.html  layout.html  results.html
