[tool.poetry]
name = "winequalityprediction-mlops"
version = "0.1.0"
description = ""
authors = ["BouajilaHamza <hamza.bouajila@enetcom.u-sfax.tn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
mlflow = "^2.18.0"
notebook = "^7.3.1"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.3"
python-box = "6.0.2"
pyyaml = "^6.0.2"
tqdm = "^4.67.1"
ensure = "1.0.2"
joblib = "^1.4.2"
types-pyyaml = "^6.0.12.20240917"
flask = "^3.1.0"
flask-cors = "^5.0.0"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
